--- a/src/app/components/consultapedidos/consultapedidos.component.html
+++ b/src/app/components/consultapedidos/consultapedidos.component.html
@@ -5,28 +5,31 @@
    
            <div class="card">
              <div class="card-body">
-               <h2 class="card-title" >Consulta de Pedidos</h2>
-   
+               <h2 class="card-title" >Consulta de Pedidos</h2>   
                <!-- General Form Elements -->
-               <form>
-  
+              <form> 
+
                 <div class="form-row">
-                  <div class="form-group col-md-3">
-                    <label class="CamposFonelli">Numero</label>
-                    <input 
-                      type="text" 
-                      id="idNumpPed"
-                      class="form-control"
-                      name="idNumpPed"
-                      #nombre="ngModel"
-                      [(ngModel)]="oBuscar.ClienteCodigo"
-                      disabled="{{ bCliente }}"
-                      required
-                    >
-                  </div>
-                  <div class="form-group col-md-3">
+
+                  <div class="form-group col-md-3">                    
+                      <label class="CamposFonelli">Numero</label> 
+                      <input 
+                        type="text" 
+                        id="idNumpPed"
+                        class="form-control"
+                        name="idNumpPed"
+                        #nombre="ngModel"
+                        [(ngModel)]="oBuscar.ClienteCodigo"
+                        disabled="{{ bCliente }}"
+                        required>
+                        
+                    </div>
+                  
+
+                  <div class="form-group col-md-3"> 
                     <label class="CamposFonelli">Filial</label>
-                    <input
+   
+                      <input
                       type="text" 
                       id="idFilPed"
                       class="form-control"
@@ -37,14 +40,14 @@
                       required
                     >
                   </div>
-                  <div class="form-group col-md-3" [hidden]="bCliente">
-                      <label class="CamposFonelli">-</label>
-                      <button type="submit" class="form-control btnFonelli">CATALOGO DE CLIENTES</button>
-                  </div>
 
-
+                  <div class="form-group col-md-3" [hidden]="bCliente"> 
+                    <label class="CamposFonelli col-md-12" style="color:white;">-</label>
+                    <button  type="button" class="btnFonelli btn" (click)="openClientes(Clientes)" style="background-color:#24a4cc;"><i class="bi bi-search"></i></button>
+                  </div> 
                   
-              </div>
+                </div> 
+
   
                   <div class="row">
                      
@@ -201,6 +204,7 @@
                       <button  *ngIf="bBanderaBtnPed" type="submit" (click)="verDetallePed()" class="btnFonelli btn float-right">Detalle pedido</button>
                   </div>
                 </div> 
+                
 
                     <div class="col-12" >                     
                       <table *ngIf="bBanderaDet" class="table table-striped">
@@ -336,10 +340,64 @@
       </div>
   
   </ng-template> 
+
+
+    <!--Modal catalogo clientes-->
+    <ng-template #Clientes let-modal >
+      <div class="modal-header" >        
+        <button type="button" class="btn-close" aria-label="Close" (click)="modal.dismiss('Cross click')"></button>
+      </div>      
+  
+      <div class="modal-body-tables" style="overflow-y: scroll;" >
+  
+          <div class="container">
+              <div class="row">
+
+                    <div class="col-12" >                     
+                      <table  class="table table-striped">
+                        <thead>
+                        <tr class="EncTabla">
+                          <th>#</th>
+                          <th scope="col" ></th>
+                          <th scope="col" >NUM</th>                         
+                          <th scope="col" >FIL</th>
+                          <th scope="col" >RAZÓN SOCIAL</th>
+                          <th scope="col" >SUCURSAL/NOMBRE</th>
+                          <th scope="col" >S</th>
+                          <th scope="col" >CONTACTO1</th>
+                          <th scope="col" >CONTACTO2</th>                          
+                        </tr>
+                        </thead>
+                        <tbody>
+                          <td *ngIf="bCargandoClientes" class="FilasFonelli" style="text-align:center" colspan="10"><span   class="spinner-border spinner-border-sm" role="status" aria-hidden="true" style="color:#183e6f"> </span></td>
+                          <tr *ngFor="let emp of oCliente.Contenido; index as i" (click)="obtenCliente(emp.ClienteCodigo,emp.ClienteFilial)">
+                            <th scope="row">{{ i + 1 }}</th>
+                            <td class="form-check" >                              
+                              <input  style="border-color: #24a4cc;" type="checkbox">
+                            </td> 
+                            <td class="FilasFonelli" style="text-align:left">{{emp.ClienteCodigo}}</td>                           
+                            <td class="FilasFonelli" style="text-align:left">{{emp.ClienteFilial}}</td>                
+                            <td class="FilasFonelli" style="text-align:left">{{emp.RazonSocial}}</td>
+                            <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Sucursal}}</td>
+                            <td class="FilasFonelli" style="text-align:left">{{emp.DatosGenerales.Status}}</td>
+                            <td class="FilasFonelli" style="text-align:left">{{emp.Contactos.Contacto1Nombre}}</td>
+                            <td class="FilasFonelli" style="text-align:left">{{emp.Contactos.Contacto2Nombre}}</td>                                  
+                          </tr>
+                        </tbody>
+                      </table>            
+                      
+                    </div>  
+              </div>
+              
+          </div>
+      </div>
   
 
-
-<!-- Copyright 2022 Google LLC. All Rights Reserved.
-    Use of this source code is governed by an MIT-style license that
-    can be found in the LICENSE file at https://angular.io/license -->
-
+      <div class="modal-footer">
+        <!-- <button type="submit" class="btn btn-primary" [disabled]="!formLoginDistribuidor.form.valid">INGRESAR</button> -->
+        
+      </div>
+  
+  </ng-template> 
+  
+  
