Se cambia video, texto nosotros y se resuelve problema de fechas.

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -98,11 +98,18 @@
               </div>
   
               <div class="col-lg-6 col-12 mt-3 mb-lg-5">
-                  <p class="me-4 font_nosotros"  data-aos-delay="300" data-aos="fade-up">Desde su fundación en 1985 hasta el dia de hoy hemos tenido una sola pasión, y es el satisfacer a nuestros clientes fabricando piezas buscando la perfección hasta el más mínimo detalle para poder <strong>convertir metales preciosos en obas de arte que plasmen la historia detras de cada pieza.</strong> 
-                      <br><br> Cada uno de nuestros colaboradores con más de 20 años laborando con nosotros son parte esencial de este proceso, y aque <strong> gracias a ellos surge la magia de poder materializar una historia, una emoción, un sentimiento y un anhelo.</strong> La magia empieza desde realizar un boceto del diseño de la joya hasta llevarla al área de lavado para dejarla perfecta y brillante.                    
-                      <br><br>Todo lo que hacemos, lo hacemos con <strong> pasión y delicadeza para poder entregar una joya impecable.</strong>
-                      <br><br>Nuestros modelos no solo son para bodas, también <strong> se realizan diseños pensados para cada ocasión.</strong> ya sea como un regalo de cumpleaños, dia de las madres, aniversarios, día del padre, graduaciones, inclusive como un auto regalo.
-                  </p>
+                  <p class="me-4 font_nosotros"  data-aos-delay="300" data-aos="fade-up">
+                      Desde el nacimiento de Fonelli en 1985 nuestra pasión ha sido <strong>convertir metales preciosos en obras de arte que plasmen la historia detrás de cada pieza.</strong>
+                      <br><br>
+                      Para con ello satisfacer a nuestros clientes fabricando piezas buscando la perfección hasta el más mínimo detalle.
+                      <br><br>
+                      Cada uno de nuestros colaboradores son parte esencial de este proceso, ya que <strong>gracias a ellos surge la magia de poder materializar una historia, una emoción, un sentimiento y un anhelo.</strong> La magia empieza desde la creación de un boceto para diseñar una joya, pasando por distintos procesos hasta que llega al área de lavado para dejarla perfecta y brillante.
+                      <br><br>
+                      Todo lo que hacemos, lo hacemos con <strong>pasión y delicadeza para poder entregar una joya impecable.</strong>
+                      <br><br>
+                      Nuestras joyas se crean para cada <strong>una de las historias importantes en tu vida;</strong> ya sea como un regalo de cumpleaños, día de las madres, aniversarios, día del padre, boda, graduaciones, inclusive como un auto regalo.
+                      Gracias por hacernos parte de tus historias.
+                   </p>
               </div>
   
               <div class="col-lg-6 col-12 mt-lg-3 mb-lg-5">
